--- a/css/resume.css
+++ b/css/resume.css
@@ -53,6 +53,9 @@ h2 {
   font-weight: 600;
   text-transform: uppercase; }
 
+#sideNav .download-text {
+  font-size: small; }
+
 @media (min-width: 992px) {
   #sideNav {
     text-align: center;
