--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -4,6 +4,10 @@
     font-weight: 600;
     text-transform: uppercase;
   }
+  .download-text{
+      
+      font-size: small;
+  }
 }
 
 @media (min-width: 992px) {
